<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_calculator"
            android:layout_marginTop = "20dp"
            android:id="@+id/goToCalculator"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_graphing"
            android:id="@+id/goToGraphing"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop = "15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_sound"
            android:id="@+id/goToSound"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop = "15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_calculus"
            android:id="@+id/goToCalculus"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop = "15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_fft"
            android:id="@+id/goToFFT"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop = "15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_livefft"
            android:id="@+id/goToLiveFFT"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop = "15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_spectrogram"
            android:id="@+id/goToSpectrogram"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop = "15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_convolution"
            android:id="@+id/goToConvolution"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_convolution_fft"
            android:id="@+id/goToConvolutionFFT"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_correlation"
            android:id="@+id/goToCorrelation"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_go_to_correlation_fft"
            android:id="@+id/goToCorrelationFFT"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>